Fix menu clipping issue

--- a/joy-memorial/wwwroot/css/mobile.css
+++ b/joy-memorial/wwwroot/css/mobile.css
@@ -19,6 +19,7 @@
     }
     .top-row
     {
+        z-index: 99999999999;
         background: white;
         position: absolute;
         width: 100%;
